--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "double-metaphone": "~0.0.1"
   },
   "devDependencies": {
-    "browserify": "^4.1.11",
-    "complexity-report": "~1.0.3",
     "eslint": "^0.6.2",
     "istanbul": "~0.2.11",
     "jscs": "^1.5.4",
@@ -34,11 +32,10 @@
     "lint-api": "node_modules/.bin/eslint index.js --env node --env browser --rule 'quotes: [2, single]'",
     "lint-test": "node_modules/.bin/eslint spec/retext-double-metaphone.spec.js --env node --env mocha --rule 'quotes: [2, single]'",
     "lint-style": "node_modules/.bin/jscs index.js spec/retext-double-metaphone.spec.js --reporter=inline",
+    "install-browser-test": "npm install browserify",
+    "build-browser-test": "node_modules/.bin/browserify spec/retext-metaphone.spec.js -o spec/browser.spec.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- spec/retext-double-metaphone.spec.js",
-    "prepublish": "npm run-script build-browser",
-    "build-browser": "node_modules/.bin/browserify spec/retext-double-metaphone.spec.js -o spec/browser.spec.js",
-    "complexity": "node_modules/.bin/cr -l --maxcyc 20 --format minimal --silent index.js",
-    "make": "npm run-script build-browser && npm run-script lint && npm run-script complexity && npm run-script coverage"
+    "make": "npm run-script lint && npm run-script coverage"
   },
   "testling": {
     "files": "spec/retext-double-metaphone.spec.js",
