--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "Titus Wormer <tituswormer@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "double-metaphone": "~0.0.1"
+    "double-metaphone": "^0.1.0"
   },
   "devDependencies": {
-    "eslint": "^0.6.2",
-    "istanbul": "~0.2.11",
+    "eslint": "^0.7.4",
+    "istanbul": "~0.3.0",
     "jscs": "^1.5.4",
     "mocha": "~1.20.1",
-    "retext": "~0.0.12",
-    "retext-porter-stemmer": "0.0.6",
-    "retext-visit": "~0.0.5"
+    "retext": "^0.1.0-rc.4",
+    "retext-porter-stemmer": "^0.1.0",
+    "retext-visit": "^0.1.0"
   },
   "repository": {
     "type": "git",
