--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "Titus Wormer <tituswormer@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "double-metaphone": "^0.1.0"
+    "double-metaphone": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^0.7.4",
-    "istanbul": "~0.3.0",
-    "jscs": "^1.5.4",
-    "mocha": "~1.20.1",
-    "retext": "^0.1.0-rc.4",
-    "retext-porter-stemmer": "^0.1.0",
-    "retext-visit": "^0.1.0"
+    "eslint": "^0.8.0",
+    "istanbul": "^0.3.0",
+    "jscs": "^1.6.0",
+    "mocha": "^1.20.0",
+    "retext": "^0.2.0-rc.2",
+    "retext-porter-stemmer": "^0.1.1",
+    "retext-visit": "^0.1.1"
   },
   "repository": {
     "type": "git",
