--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,12 @@
     ".*",
     "*.log",
     "*.md",
+    "build/",
+    "components/",
+    "coverage/",
+    "node_modules/",
     "component.json",
     "package.json",
-    "coverage",
-    "node_modules",
-    "spec"
+    "test.js"
   ]
 }
