--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "retext"
   ],
   "dependencies": {
-    "double-metaphone": "^0.1.1"
+    "double-metaphone": "^0.1.0"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,9 @@
   "devDependencies": {
     "eslint": "^0.9.0",
     "istanbul": "^0.3.0",
-    "jscs": "^1.7.0",
+    "jscs": "^1.0.0",
     "mocha": "^2.0.0",
-    "retext": "^0.3.0-rc.2",
+    "retext": "^0.3.0",
     "retext-content": "^0.2.5",
     "retext-porter-stemmer": "^0.2.2",
     "retext-visit": "^0.2.2"
