--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^2.0.0",
     "retext": "^0.3.0",
     "retext-content": "^0.2.5",
+    "retext-inspect": "^0.4.0",
     "retext-porter-stemmer": "^0.2.2",
     "retext-visit": "^0.2.2"
   },
