Refactor api, purpose, for retext@1.0.0

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
+  "extends": "eslint:recommended",
   "env": {
-    "node": true,
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "rules": {
     "quotes": [2, "single"]
